# rtk

./: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  INSTALL.md  README.md  README_es.md  README_fr.md  README_ja.md  README_ko.md  README_zh.md  SECURITY.md  install.sh
.claude/agents/: technical-writer.md
.claude/commands/: diagnose.md
.claude/skills/issue-triage/templates/: issue-comment.md
.claude/skills/pr-review/: SKILL.md
.claude/skills/pr-triage/templates/: review-comment.md
.claude/skills/ship/: SKILL.md
.github/: docs-pipeline-contract.md
.github/workflows/: cd.yml  next-release.yml  pr-target-check.yml  release.yml  sync-upstream.yml
.rtk/: filters.toml
.swarm/: schema.sql
crates/rtk-registry/: Cargo.toml  README-zh.md  README.md
crates/rtk-registry/src/: lexer.rs  lib.rs  registry.rs  rtk_install.rs  rules.rs  status.rs
docs/guide/: index.md
docs/guide/getting-started/: configuration.md  installation.md  supported-agents.md
docs/guide/resources/: troubleshooting.md
docs/maintainers/: MAINTAINERS_APPLY.md  SYNC_UPSTREAM.md
docs/usage/: TRACKING.md
hooks/augment/: README.md  rules.md
hooks/claude/: rtk-rewrite.sh
hooks/copilot/: rtk-awareness.md
hooks/cursor/: rtk-rewrite.sh
openclaw/: README.md  openclaw.plugin.json  package.json
scripts/: check-installation.sh
src/: main.rs
src/cmds/git/: gh_cmd.rs
src/core/: telemetry_cmd.rs
src/discover/: report.rs
src/hooks/: init.rs  rewrite_cmd.rs
